--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
+:root{
+    --bodycolor: #ffffff;
+    --bgcolor: #ffffff;
+    --bcolor: #ffffff;
+
+}
+
 body{
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-style: normal;
     overflow-x: none;
+    background-color: var(--bodycolor);
 }
 
 .proyectos{
     margin-bottom: 100px;
-    background-color: white;
+    background-color: var(--bgcolor);
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
@@ -19,8 +27,8 @@ body{
 .proyectos a{
     text-align: center;
     text-decoration: none;
-    color: cadetblue;
-    border: 2px solid cadetblue;
+    color: black;
+    border: 2px solid var(--bcolor);
     border-radius: 1vh;
     padding: 1vh;
     margin: 1vh 1vh 1vh 1vh;
@@ -28,7 +36,7 @@ body{
 
 .redes{
     padding-top: 2vh;
-    background-color: white;
+    background-color: var(--bgcolor);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,8 +49,8 @@ body{
 
 .redes a{
     text-decoration: none;
-    color: cadetblue;
-    border: 2px solid cadetblue;
+    color: black;
+    border: 2px solid var(--bcolor);
     padding: 1vh;
     border-radius: 1vh;
 }
@@ -64,8 +72,8 @@ body{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-color: white;
-    border: 2px solid cadetblue;
+    background-color: var(--bgcolor);
+    border: 2px solid var(--bcolor);
     border-radius: 2vh;
     margin-left: 10vh;
 }
@@ -91,9 +99,9 @@ body{
     height: 10vh;
     width: 100vh;
     text-align: center;
-    background-color: white;
+    background-color: var(--bgcolor);
     border-radius: 1vh;
-    border: 2px solid cadetblue;
+    border: 2px solid var(--bcolor);
     font-size: 10vh;
 }
 
@@ -113,12 +121,12 @@ body{
 }
 
 .costado{
-    border: 2px solid cadetblue;
+    border: 2px solid var(--bcolor);
     padding: 2vh;
     margin-left: 20vh;
     border-radius: 1vh;
     text-align: center;
-    background-color: white;
+    background-color: var(--bgcolor);
     float: right;
 }
 
