solucionado responsive, agregada pantalla carga. cambiar imagenes y crear dropdown

--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
+#contenedor_carga{
+    background-color: var(--bodycolor);
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    -webkit-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
+    z-index: 10000;
+}
+
+#carga{
+    border: 15px solid var(--bcolor);
+    border-top-style: groove;
+    height: 100px;
+    width: 100px;
+    border-radius: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    -webkit-animation: girar 1.5s linear infinite;
+    -o-animation: girar 1.5s linear infinite;
+    animation: girar 1.5s linear infinite;
+}
+
+@keyframes girar{
+    from { transform: rotate(0deg);}
+    to{transform: rotate(360deg);}
+}
+
 :root{
     --bodycolor: #ffffff;
     --bgcolor: #ffffff;
@@ -184,6 +218,11 @@ body::-webkit-scrollbar-thumb{
     color: black;
 }
 
+.referencias .card img{
+    width: 40%;
+    height: 50%;
+}
+
 /* RESPONSIVE MEDIA QUERY */
 @media (max-width: 800px){
     .cara{
@@ -216,5 +255,20 @@ body::-webkit-scrollbar-thumb{
 
     .tecnologias{
         flex-direction: column;
+    }
+    
+    .referencias{
+        flex-direction: column;
+    }
+
+    .referencias .card{
+        height: 50%;
+        width: 65%;
+        margin-top: 5%;
+    }
+
+    .referencias .card img{
+        width: 60%;
+        height: 50%;
     }
 }
