--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body::-webkit-scrollbar-thumb{
     padding-top: 2vh;
     background-color: var(--bgcolor);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     flex-wrap: nowrap;
     align-items: center;
@@ -96,6 +96,10 @@ body::-webkit-scrollbar-thumb{
 }
 
 .redes a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
     text-decoration: none;
     color: black;
     margin: 1vh;
@@ -120,6 +124,10 @@ body::-webkit-scrollbar-thumb{
     border: 2px solid var(--bcolor);
     border-radius: 2vh;
     margin-left: 5%;
+}
+
+.descripcion p{
+    width: 50%;
 }
 
 .text .cara{
@@ -286,6 +294,10 @@ body::-webkit-scrollbar-thumb{
         flex-wrap: nowrap;
         flex-direction: column;
         margin-left: 0px;
+    }
+
+    .descripcion p{
+        width: 100%;
     }
 
     .saludo{
