--- a/style.css
+++ b/style.css
@@ -1,6 +1,57 @@
+:root[data-theme="light"]{
+    --background-color: #EEE;
+    --font-color: #111;
+    --border-color: #1aa2d8;
+
+    --red-color: #EA4335; 
+    --yellow-color: #FBBC05;
+    --green-color: #8DC44F;
+    --blue-color: #4486F4;
+
+
+    --btn-blue: #3483FA;
+    --bnt-blue-bg: #E3EDFB;
+
+    --shadow-color: #1aa2d8;
+}
+
+:root[data-theme="amarillo"]{
+    --background-color: #f3eba0;
+    --font-color: #111;
+    --border-color: #d8a51a;
+
+    --red-color: #EA4335; 
+    --yellow-color: #FBBC05;
+    --green-color: #8DC44F;
+    --blue-color: #4486F4;
+
+
+    --btn-blue: #3483FA;
+    --bnt-blue-bg: #E3EDFB;
+
+    --shadow-color: #d8a51a;
+}
+
+:root[data-theme="dark"]{
+    --background-color: #111;
+    --font-color: #f8f8f8;
+    --border-color: #333;
+
+    --red-color: #EA4335; 
+    --yellow-color: #FBBC05;
+    --green-color: #8DC44F;
+    --blue-color: #4486F4;
+
+
+    --btn-blue: #3483FA;
+    --bnt-blue-bg: #E3EDFB;
+
+    --shadow-color:#535353;
+}
+
 /* PANTALLA DE CARGA */
 #contenedor_carga{
-    background-color: var(--bodycolor);
+    background-color: var(--background-color);
     height: 100%;
     width: 100%;
     position: fixed;
@@ -15,7 +66,7 @@
 }
 
 #carga{
-    border: 15px solid var(--bcolor);
+    box-shadow: var(--shadow-color) 0px 0px 8px 1px;
     border-top-style: groove;
     height: 100px;
     width: 100px;
@@ -37,34 +88,29 @@
     to{transform: rotate(360deg);}
 }
 /* FIN PANTALLA DE CARGA */
-:root{
-    --bodycolor: #ffffff;
-    --bgcolor: #ffffff;
-    --bcolor: #ffffff;
-
-}
 
 body{
     margin-top: 0;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
+    color: var(--font-color);
     font-style: normal;
     overflow-x: none;
-    background-color: var(--bodycolor);
+    background-color: var(--background-color);
 }
 
 body::-webkit-scrollbar{
-    background-color: var(--bgcolor);
+    background-color: var(--border-color);
 }
 
 body::-webkit-scrollbar-thumb{
-    background-color: var(--bodycolor);
-    border: 2px solid var(--bgcolor);
+    background-color: var(--background-color);
+    border: 2px solid var(--border-color);
 }
 
 .proyectos{
     margin-bottom: 100px;
-    background-color: var(--bgcolor);
+    background-color: var(--background-color);
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
@@ -76,8 +122,7 @@ body::-webkit-scrollbar-thumb{
 .proyectos a{
     text-align: center;
     text-decoration: none;
-    color: black;
-    border: 2px solid var(--bcolor);
+    box-shadow: var(--shadow-color) 0px 0px 8px 1px;
     border-radius: 1vh;
     padding: 1vh;
     margin: 1vh 1vh 1vh 1vh;
@@ -85,7 +130,7 @@ body::-webkit-scrollbar-thumb{
 
 .redes{
     padding-top: 2vh;
-    background-color: var(--bgcolor);
+    background-color: var(--background-color);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -103,7 +148,7 @@ body::-webkit-scrollbar-thumb{
     text-decoration: none;
     color: black;
     margin: 1vh;
-    border: 2px solid var(--bcolor);
+    box-shadow: var(--shadow-color) 0px 0px 8px 1px;
     padding: 1vh;
     border-radius: 1vh;
     transition: all 0.2s ease-in 0s;
@@ -120,8 +165,8 @@ body::-webkit-scrollbar-thumb{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-color: var(--bgcolor);
-    border: 2px solid var(--bcolor);
+    background-color: var(--background-color);
+    box-shadow: var(--shadow-color) 0px 0px 8px 1px;
     border-radius: 2vh;
     margin-left: 5%;
 }
@@ -131,10 +176,9 @@ body::-webkit-scrollbar-thumb{
 }
 
 .text .cara{
-    width: 15%;
+    width: 25%;
     float: right;
     display: flex;
-    margin-left: 50%;
 }
 
 .text .cara img{
@@ -168,9 +212,9 @@ body::-webkit-scrollbar-thumb{
     width: 90%;
     margin-top: 2vh;
     text-align: center;
-    background-color: var(--bgcolor);
+    background-color: var(--background-color);
     border-radius: 1vh;
-    border: 2px solid var(--bcolor);
+    box-shadow: var(--shadow-color) 0px 0px 8px 1px;
     font-size: 10vh;
 }
 
@@ -191,24 +235,25 @@ body::-webkit-scrollbar-thumb{
 
 .costado{
     position:sticky;
-    border: 2px solid var(--bcolor);
+    box-shadow: var(--shadow-color) 0px 0px 8px 1px;
     padding: 1vh;
     margin-left: 4%;
     margin-right: 2%;
     border-radius: 1vh;
     text-align: center;
-    background-color: var(--bgcolor);
+    background-color: var(--background-color);
     float: right;
 }
 
 .costado a{
+    color: var(--font-color);
     transition: all 0.2s ease-in 0s;
 }
 
 .costado a:hover{
-    background-color: var(--bodycolor);
-    color: var(--bgcolor);
+    background-color: var(--background-color);
     transform: scale(1.2);
+    box-shadow: var(--shadow-color) 0px 0px 5px 2.5px;
 }
 
 .p-info{
@@ -230,8 +275,8 @@ body::-webkit-scrollbar-thumb{
 
 .referencias .card{
     text-align: center;
-    background-color: var(--bgcolor);
-    border: 2px solid var(--bcolor);
+    background-color: var(--background-color);
+    box-shadow: var(--shadow-color) 0px 0px 8px 1px;
     border-radius: 2vh;
     padding: 0;
     width: 15%;
@@ -239,7 +284,7 @@ body::-webkit-scrollbar-thumb{
 
 .referencias .card a{
     text-decoration: none;
-    color: black;
+    color: var(--font-color);
 }
 
 .referencias .card a img{
@@ -262,7 +307,7 @@ body::-webkit-scrollbar-thumb{
 }
 
 /* RESPONSIVE MEDIA QUERY */
-@media (max-width: 800px){
+@media (max-width: 900px){
     .text .cara{
         display: none;
     }
@@ -283,9 +328,9 @@ body::-webkit-scrollbar-thumb{
     }
 
     .costado{
+        width: 90%;
         margin-top: 2vh;
-        margin-left: 0px;
-        margin-right: 0px;
+        margin: 2vh auto auto auto;
     }
 
     .descripcion{
@@ -293,7 +338,7 @@ body::-webkit-scrollbar-thumb{
         height: 95%;
         flex-wrap: nowrap;
         flex-direction: column;
-        margin-left: 0px;
+        margin: auto;
     }
 
     .descripcion p{
