--- a/style.css
+++ b/style.css
@@ -100,12 +100,14 @@ body{
 }
 
 body::-webkit-scrollbar{
-    background-color: var(--border-color);
+    background-color: var(--background-color);
+    width: 15px;
+    box-shadow: var(--shadow-color) 0px 0px 8px 1px;
 }
 
 body::-webkit-scrollbar-thumb{
-    background-color: var(--background-color);
-    border: 2px solid var(--border-color);
+    background-color: var(--shadow-color);
+    box-shadow: var(--shadow-color) 0px 0px 8px 5px;
 }
 
 .proyectos{
